--- a/steel_plate_defect_prediction_sl.ipynb
+++ b/steel_plate_defect_prediction_sl.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "2a31339f",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "1818d4ed",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "74732e97",
    "metadata": {},
    "outputs": [
@@ -383,48 +383,6 @@
      "text": [
       "\n",
       "--- 3.a Data Types and Non-Null Values ---\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 19219 entries, 0 to 19218\n",
-      "Data columns (total 35 columns):\n",
-      " #   Column                 Non-Null Count  Dtype  \n",
-      "---  ------                 --------------  -----  \n",
-      " 0   id                     19219 non-null  int64  \n",
-      " 1   X_Minimum              19219 non-null  int64  \n",
-      " 2   X_Maximum              19219 non-null  int64  \n",
-      " 3   Y_Minimum              19219 non-null  int64  \n",
-      " 4   Y_Maximum              19219 non-null  int64  \n",
-      " 5   Pixels_Areas           19219 non-null  int64  \n",
-      " 6   X_Perimeter            19219 non-null  int64  \n",
-      " 7   Y_Perimeter            19219 non-null  int64  \n",
-      " 8   Sum_of_Luminosity      19219 non-null  int64  \n",
-      " 9   Minimum_of_Luminosity  19219 non-null  int64  \n",
-      " 10  Maximum_of_Luminosity  19219 non-null  int64  \n",
-      " 11  Length_of_Conveyer     19219 non-null  int64  \n",
-      " 12  TypeOfSteel_A300       19219 non-null  int64  \n",
-      " 13  TypeOfSteel_A400       19219 non-null  int64  \n",
-      " 14  Steel_Plate_Thickness  19219 non-null  int64  \n",
-      " 15  Edges_Index            19219 non-null  float64\n",
-      " 16  Empty_Index            19219 non-null  float64\n",
-      " 17  Square_Index           19219 non-null  float64\n",
-      " 18  Outside_X_Index        19219 non-null  float64\n",
-      " 19  Edges_X_Index          19219 non-null  float64\n",
-      " 20  Edges_Y_Index          19219 non-null  float64\n",
-      " 21  Outside_Global_Index   19219 non-null  float64\n",
-      " 22  LogOfAreas             19219 non-null  float64\n",
-      " 23  Log_X_Index            19219 non-null  float64\n",
-      " 24  Log_Y_Index            19219 non-null  float64\n",
-      " 25  Orientation_Index      19219 non-null  float64\n",
-      " 26  Luminosity_Index       19219 non-null  float64\n",
-      " 27  SigmoidOfAreas         19219 non-null  float64\n",
-      " 28  Pastry                 19219 non-null  int64  \n",
-      " 29  Z_Scratch              19219 non-null  int64  \n",
-      " 30  K_Scatch               19219 non-null  int64  \n",
-      " 31  Stains                 19219 non-null  int64  \n",
-      " 32  Dirtiness              19219 non-null  int64  \n",
-      " 33  Bumps                  19219 non-null  int64  \n",
-      " 34  Other_Faults           19219 non-null  int64  \n",
-      "dtypes: float64(13), int64(22)\n",
-      "memory usage: 5.1 MB\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 19219 entries, 0 to 19218\n",
       "Data columns (total 35 columns):\n",
@@ -481,8 +439,6 @@
    "id": "27bc188f",
    "metadata": {},
    "source": [
-    "*(Content from EDA.md regarding data types and non-null values can be inserted here if it provides more detail than the `.info()` output, e.g., the table from your EDA.md)*\n",
-    "\n",
     "RangeIndex: 19219 entries, 0 to 19218\n",
     "\n",
     "| # | Column                 | Non-Null Count | Dtype   |\n",
@@ -508,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "1a93f4aa",
    "metadata": {},
    "outputs": [
@@ -544,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "id": "fabd7b69",
    "metadata": {},
    "outputs": [
@@ -985,7 +941,19 @@
    "id": "60a14eb4",
    "metadata": {},
    "source": [
-    "*(Content from EDA.md regarding statistical summary can be inserted here, e.g., your analysis of skewness, outliers, scale based on the table above).*\n",
+    "Numerical features don't have missing values. Minimum and maximum values for most features seem plausible given their definitions (e.g., coordinates, binary flags, indices between 0-1 or specific ranges like Orientation_Index). Features like Pixels_Areas, X_Perimeter, Y_Perimeter, and Sum_of_Luminosity have max values significantly larger than their 75th percentile (e.g., Pixels_Areas 75th percentile is 653, max is 152655). This suggests the presence of some extreme values (potential outliers) or that these features have highly skewed distributions. No values appear \"impossible\" (like negative areas). Many features exhibit significant right skewness, where the mean is considerably larger than the median (50%). This is prominent in:\n",
+    "* Pixels_Areas (mean 1683 vs. median 168)\n",
+    "* X_Perimeter (mean 95 vs. median 25)\n",
+    "* Y_Perimeter (mean 64 vs. median 23)\n",
+    "* Sum_of_Luminosity (mean 1.9e5 vs. median 1.8e4)\n",
+    "* Outside_X_Index (mean 0.03 vs. median 0.0095)\n",
+    "* Even the log-transformed area features (LogOfAreas, Log_X_Index, Log_Y_Index) still show some right skew.\n",
+    "\n",
+    "Other features show weaker skews (e.g., Y_Minimum, Y_Maximum, Steel_Plate_Thickness are right-skewed; X_Minimum, X_Maximum, Minimum_of_Luminosity are slightly left-skewed). Empty_Index, Edges_X_Index, Orientation_Index, Luminosity_Index appear relatively symmetrical (mean close to median). Edges_Y_Index and Outside_Global_Index show some left skew or concentration at higher values (median is 1.0 for Outside_Global_Index).\n",
+    "\n",
+    "There's a vast difference in the scales (ranges and standard deviations) of the features. For example, Y_Minimum and Y_Maximum have standard deviations in the millions (e.g., 1.9e6) and values up to 1.29e7. Sum_of_Luminosity also has a very large scale. In contrast, indices like Edges_Index (std ~0.32) or binary TypeOfSteel_ flags (std ~0.49) operate on a much smaller scale (typically 0 to 1). LogOfAreas has a std of ~0.76, while Pixels_Areas has a std of ~3730.\n",
+    "\n",
+    "The significant variation in feature scales strongly suggests that feature scaling like Normalization will be crucial.\n",
     "\n",
     "**Key Observations from Statistical Summary:**\n",
     "- **No Missing Values:** All features have a `count` of 19219.\n",
@@ -1004,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "31ee295a",
    "metadata": {},
    "outputs": [
@@ -1027,11 +995,6 @@
       "Number of samples with no defects: 818\n",
       "Total number of samples: 19219\n",
       "Number of samples with at least one defect: 18401\n",
-      "\n",
-      "Number of samples with no defects: 818\n",
-      "Total number of samples: 19219\n",
-      "Number of samples with at least one defect: 18401\n",
-      "Saved target distribution plot to: eda\\defect_type_distribution.png\n",
       "Saved target distribution plot to: eda\\defect_type_distribution.png\n"
      ]
     },
@@ -1080,8 +1043,7 @@
    "id": "ff4d87ba",
    "metadata": {},
    "source": [
-    "*(Content from EDA.md regarding target variable distribution can be inserted here)*\n",
-    "The distribution shows an imbalance among defect types, with 'Other_Faults' being the most common and 'Dirtiness'/'Stains' being the least common. This imbalance might need to be addressed during modeling (e.g., using appropriate metrics, resampling techniques, or class weights)."
+    "The distribution shows an imbalance among defect types, with 'Other_Faults' being the most common and 'Dirtiness'/'Stains' being the least common."
    ]
   },
   {
@@ -1102,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "id": "45ac7ddf",
    "metadata": {},
    "outputs": [
@@ -1112,7 +1074,6 @@
      "text": [
       "\n",
       "--- Generating histograms for numerical features ---\n",
-      "Saved feature histograms plot to: eda\\feature_histograms.png\n",
       "Saved feature histograms plot to: eda\\feature_histograms.png\n"
      ]
     },
@@ -1165,6 +1126,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f3970a43",
+   "metadata": {},
+   "source": [
+    "**Figure: Histograms of Numerical Features**\n",
+    "\n",
+    "These histograms display the distribution of each numerical feature in the dataset.\n",
+    "- **Skewness:** Many features, such as `Pixels_Areas`, `X_Perimeter`, `Y_Perimeter`, `Sum_of_Luminosity`, and `Outside_X_Index`, are heavily right-skewed, with most values concentrated on the left side and a long tail to the right. This aligns with the observations from the statistical summary table.\n",
+    "- **Log-Transformed Features:** Features like `LogOfAreas`, `Log_X_Index`, and `Log_Y_Index` (which are log-transformed versions of area/dimensions) appear more bell-shaped than their original counterparts, though some skewness might still be present. This demonstrates the utility of log transformation for highly skewed data.\n",
+    "- **Bi-modal/Multi-modal Distributions:** Some features like `Length_of_Conveyer` or `Steel_Plate_Thickness` might hint at bi-modal or multi-modal distributions, possibly indicating distinct groups or operational conditions.\n",
+    "- **Index Features:** Many index features (e.g., `Edges_Index`, `Empty_Index`, `Square_Index`, `SigmoidOfAreas`) are distributed between 0 and 1, as expected by their definition. `Orientation_Index` is centered around 0 but spans negative and positive values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2202e05a",
    "metadata": {},
    "source": [
@@ -1173,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "9468f140",
    "metadata": {},
    "outputs": [
@@ -1183,7 +1158,6 @@
      "text": [
       "\n",
       "--- Generating correlation heatmaps ---\n",
-      "Saved feature-target correlation heatmap to: eda\\feature_target_correlation_heatmap.png\n",
       "Saved feature-target correlation heatmap to: eda\\feature_target_correlation_heatmap.png\n"
      ]
     },
@@ -1268,14 +1242,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2839b7a7",
+   "metadata": {},
+   "source": [
+    "**Figure: Correlation Heatmap between Numeric Features and Target Defect Types**\n",
+    "\n",
+    "This heatmap visualizes the Pearson correlation coefficients between each numerical feature and each of the 7 target defect types.\n",
+    "- **Red cells** indicate positive correlation (as the feature value increases, the likelihood of the defect increases).\n",
+    "- **Blue cells** indicate negative correlation (as the feature value increases, the likelihood of the defect decreases).\n",
+    "- **Lighter/Whiter cells** indicate weak or no linear correlation.\n",
+    "\n",
+    "**Key Observations:**\n",
+    "- **`K_Scatch`:** Shows notable positive correlations with `Pixels_Areas` (0.70), `X_Perimeter` (0.68), `Y_Perimeter` (0.63), `Sum_of_Luminosity` (0.64), `LogOfAreas` (0.75), and `Log_X_Index` (0.78). This suggests larger, wider defects are more likely to be `K_Scatch`. It also has a strong negative correlation with `Outside_X_Index` (-0.78) and `Edges_X_Index` (-0.68), implying these scratches are typically well-contained within the plate's main surface rather than extending to the edges. `Orientation_Index` shows a negative correlation (-0.41), suggesting a particular orientation preference.\n",
+    "- **`Z_Scratch`:** Exhibits a moderate positive correlation with `TypeOfSteel_A300` (0.38) and a negative correlation with `TypeOfSteel_A400` (-0.37), suggesting this defect type is more common with steel type A300.\n",
+    "- **`Bumps`:** Shows some positive correlation with `Outside_X_Index` (0.22) and `Log_X_Index` (0.25), and `Edges_Y_Index` (0.21).\n",
+    "- **`Other_Faults`:** Correlates positively with `Steel_Plate_Thickness` (0.20) and `Sum_of_Luminosity` (0.21).\n",
+    "- **Weak Correlations:** Many features show weak correlations with defect types like `Pastry`, `Stains`, and `Dirtiness`, suggesting that linear relationships alone might not be strong predictors for these, or a combination of features is needed.\n",
+    "\n",
+    "These correlations provide initial hints about which features might be more influential for predicting specific defects. However, low correlation does not necessarily mean a feature is useless, as non-linear relationships might exist.\n",
+    "\n",
+    "**Figure: Correlation Heatmap between Numerical Features**\n",
+    "\n",
+    "This heatmap displays the Pearson correlation coefficients between pairs of numerical features.\n",
+    "- **Strong Positive Correlations (Dark Red):**\n",
+    "    - `X_Minimum` and `X_Maximum` are highly correlated, as expected (they define the x-bounds of a defect). Similarly for `Y_Minimum` and `Y_Maximum`.\n",
+    "    - `Pixels_Areas` is strongly correlated with `X_Perimeter`, `Y_Perimeter`, `Sum_of_Luminosity`, and `LogOfAreas`. This makes sense as larger areas tend to have larger perimeters and luminosity sums.\n",
+    "    - `LogOfAreas` is highly correlated with `Log_X_Index` and `Log_Y_Index`.\n",
+    "- **Strong Negative Correlations (Dark Blue):**\n",
+    "    - `TypeOfSteel_A300` and `TypeOfSteel_A400` are perfectly negatively correlated (-1.00), indicating they are mutually exclusive binary flags (if one is 1, the other is 0).\n",
+    "    - `Edges_X_Index` shows a strong negative correlation with `Outside_X_Index`.\n",
+    "- **Multicollinearity:** The presence of several strongly correlated feature pairs (e.g., values > 0.7 or < -0.7) indicates multicollinearity. This means some features provide redundant information. While not problematic for all models, it can affect the interpretability of coefficients in linear models and might be a consideration for feature selection or dimensionality reduction techniques.\n",
+    "For example, `Pixels_Areas` and `LogOfAreas` are highly correlated, as `LogOfAreas` is a direct transformation of `Pixels_Areas`. Using both might be redundant for some models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "14358986",
    "metadata": {},
    "source": [
-    "*(Content from EDA.md section `2.e` interpreting the heatmaps can be inserted here)*\n",
-    "\n",
-    "**Heatmap Observations:**\n",
-    "- **Feature-Target:** Some features show moderate correlations with specific defect types (e.g., `X_Minimum`, `X_Maximum`, `LogOfAreas` with `K_Scatch`).\n",
-    "- **Feature-Feature:** Several groups of features are highly correlated with each other (e.g., `X_Minimum` and `X_Maximum`; `Y_Minimum` and `Y_Maximum`; `Pixels_Areas` and `Sum_of_Luminosity`; `LogOfAreas` with original area-related features). This indicates multicollinearity, which might be relevant for some models or feature selection."
+    "> Note: High positive (red) or negative (blue) correlations between features might indicate multicollinearity (redundancy). Features highly correlated with target variables are potentially good predictors. Low correlation doesn't necessarily mean a feature is useless (non-linear relationships might exist)."
    ]
   },
   {
@@ -1288,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "id": "b4f9c306",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "454adecb",
    "metadata": {},
    "outputs": [
@@ -1397,13 +1402,15 @@
     "if not df_train_initial.empty:\n",
     "    print(\"\\n--- Splitting Data into Training and Validation Sets ---\")\n",
     "\n",
-    "    X = df_train_initial[feature_columns]\n",
-    "    y = df_train_initial[target_columns]\n",
+    "    # Separate features and targets\n",
+    "    X = df_train_initial[feature_columns] # features\n",
+    "    y = df_train_initial[target_columns] # targets\n",
     "\n",
     "    # Stratify based on whether a sample has any defect or not, to maintain proportion of defected samples.\n",
     "    # This is a simple stratification for multi-label; more complex strategies might be needed.\n",
     "    stratify_col = (y.sum(axis=1) > 0)\n",
     "    \n",
+    "    # Split into training (80%) and validation (20%) sets\n",
     "    X_train, X_val, y_train, y_val = train_test_split(\n",
     "        X, y, test_size=0.2, random_state=42, stratify=stratify_col \n",
     "    )\n",
@@ -1425,8 +1432,6 @@
    "id": "22c7a392",
    "metadata": {},
    "source": [
-    "*(Content from Preprocessing.md section on Data Splitting can be inserted here, e.g., the table with shapes)*\n",
-    "\n",
     "| Dataset            | Features Shape | Target Shape |\n",
     "|-------------------|----------------|--------------|\n",
     "| Training          | (15375, 27)    | (15375, 7)   |\n",
@@ -1440,7 +1445,7 @@
    "source": [
     "## 5. Data Preprocessing\n",
     "\n",
-    "This section covers preprocessing steps applied to the data, such as feature scaling."
+    "This section covers preprocessing steps applied to the data, such as feature scaling. Given that many of your features are skewed and have potential outliers, StandardScaler will be used."
    ]
   },
   {
@@ -1453,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "ef696ab3",
    "metadata": {},
    "outputs": [
@@ -2115,7 +2120,7 @@
     "        # Fit the scaler on the training data's numeric features ONLY\n",
     "        scaler.fit(X_train[numeric_cols_to_scale])\n",
     "\n",
-    "        # Save the scaler (uncomment if you want to save it)\n",
+    "        # Save the scaler\n",
     "        if eda_folder:\n",
     "            scaler_filename = os.path.join(eda_folder, 'standard_scaler.joblib')\n",
     "            try:\n",
@@ -2125,7 +2130,7 @@
     "                print(f\"\\nCould not save StandardScaler: {e}\")\n",
     "\n",
     "        # Transform both training and validation data's numeric features\n",
-    "        # Important to make copies if you want to keep original X_train/X_val numeric values\n",
+    "        # Make copies to keep original X_train/X_val numeric values\n",
     "        X_train_scaled = X_train.copy()\n",
     "        X_val_scaled = X_val.copy()\n",
     "\n",
@@ -2150,8 +2155,6 @@
    "id": "19e0a829",
    "metadata": {},
    "source": [
-    "*(Content from Preprocessing.md on Standardization can be inserted here, including the list of features scaled, and the tables for 'First 5 rows of X_train_scaled' and 'Statistical summary of scaled numeric features')*\n",
-    "\n",
     "**Applied StandardScaler to 27 numeric features:**\n",
     "```\n",
     "X_Minimum, X_Maximum, Y_Minimum, Y_Maximum, Pixels_Areas, X_Perimeter, Y_Perimeter, \n",
