--- a/steel_plate_defect_prediction_sl.ipynb
+++ b/steel_plate_defect_prediction_sl.ipynb
@@ -3034,7 +3034,7 @@
    "source": [
     "### 7.1 Confusion Matrices (Per Label)\n",
     "\n",
-    "We will visualize confusion matrices for each label for our best performing models or selected models to understand their performance on individual defect types."
+    "We will visualize confusion matrices for each label for our models to understand their performance on individual defect types."
    ]
   },
   {
